--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,4 @@ node_modules
 logs
 **/*.backup.*
 **/*.back.*
-frontend/static/frontend/main.js
-frontend/static/frontend/main.js.map
+frontend/static/frontend/
