--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@react-spring/web": "^9.7.3",
     "axios": "^1.6.8",
     "hamburger-react": "^2.5.0",
+    "react-helmet-async": "^2.0.4",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8"
   }
