--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.7.2
 Django==5.0.3
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
+gunicorn==22.0.0
+packaging==24.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
